--- a/app/src/main/res/layout/activity_normal_game6.xml
+++ b/app/src/main/res/layout/activity_normal_game6.xml
@@ -118,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:src="@drawable/correct"
+                android:src="@drawable/wrong"
                 android:visibility="invisible" />
         </FrameLayout>
 
