--- a/app/src/main/res/layout/activity_puzzle_easy.xml
+++ b/app/src/main/res/layout/activity_puzzle_easy.xml
@@ -8,19 +8,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_weight="0.15"
         android:background="@color/bgPurple"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/logoImg"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/logo" />
+
+        <ImageView
+            android:id="@+id/levelStar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/logo" />
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/star" />
     </LinearLayout>
+
 
 
     <TextView
@@ -90,7 +104,8 @@
                     android:layout_marginRight="70dp"
                     android:layout_weight="0"
                     android:text="@string/flask"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewLaska"
@@ -100,7 +115,8 @@
                     android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:text="@string/laksa"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <!-- Buttons -->
@@ -182,7 +198,8 @@
                     android:layout_marginRight="80dp"
                     android:layout_weight="0"
                     android:text="@string/Rose"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewDog"
@@ -192,7 +209,8 @@
                     android:layout_weight="0"
                     android:layout_marginLeft="50dp"
                     android:text="@string/Dog"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -269,7 +287,8 @@
                     android:layout_marginRight="80dp"
                     android:layout_weight="0"
                     android:text="@string/Clogs"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewspoon"
@@ -279,7 +298,8 @@
                     android:layout_weight="0"
                     android:layout_marginLeft="10dp"
                     android:text="@string/Spoon"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -356,7 +376,8 @@
                     android:layout_marginRight="70dp"
                     android:layout_weight="0"
                     android:text="@string/Armchair"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewBirdCage"
@@ -365,7 +386,8 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0"
                     android:text="@string/Bird_Cage"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
