--- a/app/src/main/res/layout/activity_puzzle_expert.xml
+++ b/app/src/main/res/layout/activity_puzzle_expert.xml
@@ -8,20 +8,54 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.45"
+        android:layout_weight="0.35"
         android:background="@color/bgPurple"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/logoImg"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/logo" />
+
+        <ImageView
+            android:id="@+id/levelStar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/logo" />
-    </LinearLayout>
+            android:layout_marginRight="10dp"
+            android:layout_weight="1.3"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/star" />
 
+        <ImageView
+            android:id="@+id/levelStar2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1.3"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/star" />
+
+        <ImageView
+            android:id="@+id/levelStar3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1.3"
+            android:paddingBottom="20dp"
+            app:srcCompat="@drawable/star" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -41,7 +75,7 @@
         android:layout_height="450dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_weight="0.1">>
+        android:layout_weight="0.1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -86,7 +120,8 @@
                     android:layout_weight="0"
                     android:text="@string/Parrot"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewdimsum"
@@ -97,7 +132,8 @@
                     android:layout_weight="0"
                     android:text="@string/DimSum"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
 
@@ -177,7 +213,8 @@
                     android:layout_weight="0"
                     android:text="@string/Tingkat"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewMahjong"
@@ -188,7 +225,8 @@
                     android:layout_weight="0"
                     android:text="@string/Mahjong"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -266,7 +304,8 @@
                     android:layout_weight="0"
                     android:text="@string/Orchid"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewSatay"
@@ -277,7 +316,8 @@
                     android:layout_weight="0"
                     android:text="@string/Satay"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -355,7 +395,8 @@
                     android:layout_weight="0"
                     android:text="@string/GoldCoins"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewWeddingBaskets"
@@ -365,7 +406,8 @@
                     android:layout_weight="0"
                     android:text="@string/WeddingBasket"
                     android:textSize="28sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
