--- a/app/src/main/res/layout/activity_puzzle_expert.xml
+++ b/app/src/main/res/layout/activity_puzzle_expert.xml
@@ -112,28 +112,30 @@
 
                 <TextView
                     android:id="@+id/textViewParrot"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="70dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/Parrot"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/textViewdimsum"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="30dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/DimSum"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
 
@@ -144,7 +146,7 @@
 
                 <Button
                     android:id="@+id/btnParrot"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -155,11 +157,12 @@
                     android:text="@string/start"
                     android:textColor="@android:color/black"
                     android:textSize="25sp"
-                    app:backgroundTint="@null" />
+                    app:backgroundTint="@null"
+                    android:maxLines="1"/>
 
                 <Button
                     android:id="@+id/btndimSum"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -171,7 +174,8 @@
                     android:text="@string/start"
                     android:textColor="@android:color/black"
                     android:textSize="25sp"
-                    app:backgroundTint="@null" />
+                    app:backgroundTint="@null"
+                    android:maxLines="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -205,28 +209,30 @@
 
                 <TextView
                     android:id="@+id/textViewTingkat"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="80dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/Tingkat"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/textViewMahjong"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/Mahjong"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -236,7 +242,7 @@
 
                 <Button
                     android:id="@+id/btnTingkat"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -251,7 +257,7 @@
 
                 <Button
                     android:id="@+id/btnMahjong"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -296,28 +302,30 @@
 
                 <TextView
                     android:id="@+id/textViewOrchid"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="80dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/Orchid"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/textViewSatay"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="30dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/Satay"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -327,7 +335,7 @@
 
                 <Button
                     android:id="@+id/btnOrchid"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -342,7 +350,7 @@
 
                 <Button
                     android:id="@+id/btnSatay"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -392,22 +400,24 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="70dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/GoldCoins"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/textViewWeddingBaskets"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/WeddingBasket"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -417,7 +427,7 @@
 
                 <Button
                     android:id="@+id/btnGoldCoins"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -432,7 +442,7 @@
 
                 <Button
                     android:id="@+id/btnWeddingBasket"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
