--- a/app/src/main/res/layout/activity_puzzle_normal.xml
+++ b/app/src/main/res/layout/activity_puzzle_normal.xml
@@ -101,16 +101,17 @@
 
                 <TextView
                     android:id="@+id/textViewCutlery"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="70dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/cutlery"
                     android:textSize="28sp"
                     android:textAlignment="center"
                     android:textStyle="bold"
+                    android:maxLines="1"
                     />
 
                 <TextView
@@ -118,12 +119,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:layout_marginLeft="50dp"
                     android:text="@string/food"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
 
@@ -134,7 +136,7 @@
 
                 <Button
                     android:id="@+id/btnCutlery"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -149,7 +151,7 @@
 
                 <Button
                     android:id="@+id/btnFood"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -195,20 +197,21 @@
 
                 <TextView
                     android:id="@+id/textViewAnimals"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="60dp"
                     android:layout_marginRight="80dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/animals"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/textViewLivingRoom"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp"
@@ -217,7 +220,8 @@
                     android:text="@string/livingRoom"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -227,7 +231,7 @@
 
                 <Button
                     android:id="@+id/btnAnimals"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -242,7 +246,7 @@
 
                 <Button
                     android:id="@+id/btnLivingRoom"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -287,28 +291,30 @@
 
                 <TextView
                     android:id="@+id/textViewFlower"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="80dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/flower"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/textViewScenery"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:layout_marginLeft="10dp"
                     android:text="@string/scenery"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
             <LinearLayout
@@ -318,7 +324,7 @@
 
                 <Button
                     android:id="@+id/btnFlower"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -333,7 +339,7 @@
 
                 <Button
                     android:id="@+id/btnScenery"
-                    android:layout_width="150dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="20dp"
@@ -378,27 +384,29 @@
 
                 <TextView
                     android:id="@+id/textViewSnacks"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="70dp"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/snacks"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/textViewHouseholdItems"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0"
+                    android:layout_weight="1"
                     android:text="@string/householdItems"
                     android:textSize="28sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:maxLines="1"/>
             </LinearLayout>
 
             <LinearLayout
