--- a/app/src/main/res/layout/activity_expert_game1.xml
+++ b/app/src/main/res/layout/activity_expert_game1.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -310,21 +311,33 @@
 
 
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Button
         android:id="@+id/buttonResult"
-        android:layout_width="260dp"
+        android:layout_width="220dp"
         android:layout_height="64dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="0.01"
         android:background="@drawable/orange_btn"
-        android:text="@string/chooseDiff"
+        android:text="@string/goodJob"
         android:textColor="@color/black"
         android:textSize="27dp"
         android:visibility="invisible"
         app:backgroundTint="@null" />
+
+        <ImageView
+  android:layout_width="200dp"
+android:layout_height="64dp"
+    app:srcCompat="@drawable/undo__correct_color_"
+    android:visibility="invisible"/>
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/buttonBack"
