--- a/app/src/main/res/layout/activity_easy_game4.xml
+++ b/app/src/main/res/layout/activity_easy_game4.xml
@@ -183,33 +183,32 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonResult"
-        android:layout_width="260dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="16dp"
-        android:layout_weight="0"
-        android:background="@drawable/orange_btn"
-        android:text="@string/goodJob"
-        android:textColor="@color/black"
-        android:textSize="27dp"
-        android:visibility="invisible"
-        app:backgroundTint="@null" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/buttonResult"
+            android:layout_width="220dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="16dp"
+            android:layout_weight="0.01"
+            android:background="@drawable/orange_btn"
+            android:text="@string/goodJob"
+            android:textColor="@color/black"
+            android:textSize="27dp"
+            android:visibility="invisible"
+            app:backgroundTint="@null" />
 
-    <Button
-        android:id="@+id/buttonBack"
-        android:layout_width="260dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="0"
-        android:background="@drawable/orange_btn"
-        android:text="@string/back"
-        android:textColor="@color/black"
-        android:textSize="27dp"
-        app:backgroundTint="@null" />
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="64dp"
+            app:srcCompat="@drawable/undo__correct_color_"
+            android:visibility="invisible"/>
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
