--- a/app/src/main/res/layout/activity_howtoplay.xml
+++ b/app/src/main/res/layout/activity_howtoplay.xml
@@ -47,7 +47,7 @@
             android:paddingBottom="20dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingLeft="8dp"
@@ -55,19 +55,16 @@
 
                 <ImageView
                     android:id="@+id/htpStar"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/star6"
-                     />
+                    app:srcCompat="@drawable/star6" />
 
                 <TextView
                     android:id="@+id/htp2"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
-                    android:layout_weight="5"
                     android:text="@string/htp2"
                     android:textSize="25sp"
                     android:textStyle="bold" />
@@ -83,18 +80,17 @@
 
                 <TextView
                     android:id="@+id/htp3"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
                     android:text="@string/htp3"
                     android:textSize="25sp"
                     android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/htpExample"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_width="70dp"
+                    android:layout_height="130dp"
                     app:srcCompat="@drawable/example" />
             </LinearLayout>
 
